- added new variables to .ini file - updated README listing new requirements - added pin change functionality to RADIUS * pin change uses /auth and /token/setpin instead of /validate/check * transactions with a pin_change set to TRUE are saved off into memcached * each access-request packet will check to see if a saved transaction exists

--- a/rlm_perl.ini
+++ b/rlm_perl.ini
@@ -4,6 +4,10 @@ URL = https://localhost/validate/check
 #RESCONF = someResolver
 SSL_CHECK = false
 #DEBUG = true
+# All three of the following settings must be configured to enable PIN change
+#ENABLEPINCHANGE = true
+#URL_AUTH = https://localhost/auth
+#URL_SETPIN = https://localhost/token/setpin
 
 [Mapping]
 serial = privacyIDEA-Serial
